--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+html {
+  font-size: 62.5%;
+  width: 100%;
+  height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.middle {
+  margin: auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inputDiv {
+  width: 26rem;
+  margin-top: 5rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#inputNumber {
+  font-size: 2rem;
+}
+#buttonDiv {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 18rem;
+  margin-left: 3rem;
+  margin-top: 2rem;
 }
-
-.App-link {
-  color: #61dafb;
+.dataDiv {
+  width: 35rem;
+  margin-top: 3rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table {
+  width: 35rem;
+  font-size: 2rem;
+}
+td,
+th {
+  border: 1px solid black;
 }
